force-app/main/default/objects/Case/fields/AccountOwnerAlias__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerAlias__c</fullName>
    <formula>Account.Owner.Alias</formula>
    <label>Account Owner Alias</label>
    <type>Text</type>
</CustomField>