force-app/main/default/objects/Case/fields/Action_to_Correct_Deficiency__c.field-meta.xml
<CustomField>
    <fullName>Action_to_Correct_Deficiency__c</fullName>
    <label>Action to Correct Deficiency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>