force-app/main/default/objects/Case/fields/Case_Member_1__c.field-meta.xml
<CustomField>
    <fullName>Case_Member_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A member of this case.</description>
    <label>Case Member 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>