force-app/main/default/objects/Case/fields/Case_Member_2__c.field-meta.xml
<CustomField>
    <fullName>Case_Member_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Member 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>