force-app/main/default/objects/Case/fields/Case_Member_3__c.field-meta.xml
<CustomField>
    <fullName>Case_Member_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Member 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>