force-app/main/default/objects/Case/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <description>What is the primary subject of your case?</description>
    <label>Case Subject</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Complaint</fullName>
            </value>
            <value>
                <fullName>Code Error</fullName>
            </value>
            <value>
                <fullName>Diagram Error</fullName>
            </value>
            <value>
                <fullName>Inputting Error</fullName>
            </value>
            <value>
                <fullName>Invoice Error</fullName>
            </value>
            <value>
                <fullName>Logistics Error</fullName>
            </value>
            <value>
                <fullName>Long Vendor Response</fullName>
            </value>
            <value>
                <fullName>Manufacturer Error</fullName>
            </value>
            <value>
                <fullName>Missing Labels</fullName>
            </value>
            <value>
                <fullName>Ordering Error</fullName>
            </value>
            <value>
                <fullName>Part Damage</fullName>
            </value>
            <value>
                <fullName>Pricing Error</fullName>
            </value>
            <value>
                <fullName>Shipping Error</fullName>
            </value>
            <value>
                <fullName>Wrong Selection/Specifications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>