force-app/main/default/objects/Case/fields/CreatedDateCal__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateCal__c</fullName>
    <description>Created date for calendar</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Created Date Only</label>
    <type>Date</type>
</CustomField>