force-app/main/default/objects/Case/fields/DepartmentRep__c.field-meta.xml
<CustomField>
    <fullName>DepartmentRep__c</fullName>
    <description>used to select others working on this case team similar to selecting an Inside Sales rep</description>
    <inlineHelpText>Ties the corresponding department member to the case for information accuracy and accountability.</inlineHelpText>
    <label>Department Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering - Juan Torres</fullName>
            </value>
            <value>
                <fullName>Engineering - Kate Romanovskaya</fullName>
            </value>
            <value>
                <fullName>Engineering - Marcel Rodriguez</fullName>
            </value>
            <value>
                <fullName>Engineering - Marinela Soler</fullName>
            </value>
            <value>
                <fullName>Shipping - Jeremy Holt</fullName>
            </value>
            <value>
                <fullName>Shipping - Rick Hubarewich</fullName>
            </value>
            <value>
                <fullName>Shop - Charlie Matheson</fullName>
            </value>
            <value>
                <fullName>Shop - Ryan Bouffard</fullName>
            </value>
            <value>
                <fullName>Engineering - Carolina Arno</fullName>
                <isActive>false</isActive>
                <label>Engineering - Carolina Arno</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>