force-app/main/default/objects/Case/fields/Description_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Issue__c</fullName>
    <inlineHelpText>Enter the initial details of the issue.</inlineHelpText>
    <label>Description of Issue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>