force-app/main/default/objects/Case/fields/Details_of_Deficiency__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Deficiency__c</fullName>
    <label>Details of Deficiency</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>