force-app/main/default/objects/Case/fields/Engineering_Member__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>