force-app/main/default/objects/Case/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>