force-app/main/default/objects/Case/fields/External_Issue__c.field-meta.xml
<CustomField>
    <fullName>External_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this case an external issue caused outside of Welco?</inlineHelpText>
    <label>External Issue</label>
    <type>Checkbox</type>
</CustomField>