force-app/main/default/objects/Case/fields/Inside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep__c</fullName>
    <inlineHelpText>Ties the Inside Sales member to the case for information accuracy and accountability.</inlineHelpText>
    <label>Inside Sales Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carolina Arno</fullName>
            </value>
            <value>
                <fullName>Jessica Holt</fullName>
            </value>
            <value>
                <fullName>Marcel Rodriguez</fullName>
            </value>
            <value>
                <fullName>Tiffany Clark</fullName>
            </value>
            <value>
                <fullName>Constance Chung</fullName>
                <isActive>false</isActive>
                <label>Constance Chung</label>
            </value>
            <value>
                <fullName>Jasmine Rattanaviboun</fullName>
                <isActive>false</isActive>
                <label>Jasmine Rattanaviboun</label>
            </value>
            <value>
                <fullName>Kate Romanovskaya</fullName>
                <isActive>false</isActive>
                <label>Kate Romanovskaya</label>
            </value>
            <value>
                <fullName>Lauren Spierenburg</fullName>
                <isActive>false</isActive>
                <label>Lauren Spierenburg</label>
            </value>
            <value>
                <fullName>Melissa Deering</fullName>
                <isActive>false</isActive>
                <label>Melissa Deering</label>
            </value>
            <value>
                <fullName>Rebekah Burgeson</fullName>
                <isActive>false</isActive>
                <label>Rebekah Burgeson</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>