force-app/main/default/objects/Case/fields/Logistics_Member__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistics Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>