force-app/main/default/objects/Case/fields/Manufacturer_Issue__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a manufacturer issue?</inlineHelpText>
    <label>Manufacturer Issue</label>
    <type>Checkbox</type>
</CustomField>