force-app/main/default/objects/Case/fields/ModelNumber__c.field-meta.xml
<CustomField>
    <fullName>ModelNumber__c</fullName>
    <label>Model Number(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>