force-app/main/default/objects/Case/fields/NCR_Approved_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>NCR_Approved_by_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCR Approved by Manager</label>
    <type>Checkbox</type>
</CustomField>