force-app/main/default/objects/Case/fields/NCR_Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>NCR_Approved_Date_Time__c</fullName>
    <label>NCR Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>