force-app/main/default/objects/Case/fields/NCR_Assigned_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>NCR_Assigned_to_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Franco Vignone or Michael Stark</inlineHelpText>
    <label>NCR Assigned to Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <value>005E0000007Zpkk</value>
        </filterItems>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <value>0050h00000GXG8Q</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>