force-app/main/default/objects/Case/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>