force-app/main/default/objects/Case/fields/Next_Step_Editor__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NextStepEditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>