force-app/main/default/objects/Case/fields/Next_Step_is_Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_is_Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>next step owner is selected when next step is edited as requested and reviewed by Inside Sales, Melissa M, Franco V.</description>
    <inlineHelpText>Individual responsible for the next follow up.</inlineHelpText>
    <label>Next Step is Assigned to</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The user cannot be found or the user is inactive.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>