force-app/main/default/objects/Case/fields/NextStepAssignedEmail__c.field-meta.xml
<CustomField>
    <fullName>NextStepAssignedEmail__c</fullName>
    <description>Email field to work with email alert</description>
    <label>NextStepAssignedEmail</label>
    <type>Email</type>
</CustomField>