force-app/main/default/objects/Case/fields/NextStepEditorAlias__c.field-meta.xml
<CustomField>
    <fullName>NextStepEditorAlias__c</fullName>
    <defaultValue>$User.Alias</defaultValue>
    <label>NextStepEditorAlias</label>
    <length>10</length>
    <type>Text</type>
</CustomField>