force-app/main/default/objects/Case/fields/Previous_Steps__c.field-meta.xml
<CustomField>
    <fullName>Previous_Steps__c</fullName>
    <label>Previous Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>