force-app/main/default/objects/Case/fields/Report_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Report_Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Case Owner if Salesforce access is not available.</inlineHelpText>
    <label>Report Completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>