force-app/main/default/objects/Case/fields/Resolution_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Outcome__c</fullName>
    <label>Resolution Outcome</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>