force-app/main/default/objects/Case/fields/Restocking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Restocking_Fee__c</fullName>
    <description>Restocking Fee Percentage</description>
    <label>Restocking Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>