force-app/main/default/objects/Case/fields/RMANumber__c.field-meta.xml
<CustomField>
    <fullName>RMANumber__c</fullName>
    <description>Return Merchandise Authorization Number</description>
    <label>RMA #</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>