force-app/main/default/objects/Case/fields/Root_Cause_of_Deficiency__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_of_Deficiency__c</fullName>
    <label>Root Cause of Deficiency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>