force-app/main/default/objects/Case/fields/Serial_s__c.field-meta.xml
<CustomField>
    <fullName>Serial_s__c</fullName>
    <label>Serial Number(s)</label>
    <type>TextArea</type>
</CustomField>