force-app/main/default/objects/Case/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <description>Identify if Welco has approved the Warranty Claim</description>
    <label>Warranty Claim Approved</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Warranty_Claim__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>