force-app/main/default/objects/Case/fields/Warranty_Claim__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox as requested by Management to identify whether the customer has submitted a warranty claim</description>
    <inlineHelpText>Did the customer submit this as a warranty claim?</inlineHelpText>
    <label>Warranty Claim</label>
    <type>Checkbox</type>
</CustomField>