force-app/main/default/objects/Case/recordTypes/Accounting.recordType-meta.xml
<RecordType>
    <fullName>Accounting</fullName>
    <active>true</active>
    <businessProcess>Main</businessProcess>
    <description>Pricing, Payment (Department: Accounting)</description>
    <label>Accounting</label>
</RecordType>