force-app/main/default/objects/Case/recordTypes/Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service</fullName>
    <active>true</active>
    <businessProcess>Main</businessProcess>
    <description>General Information, Feedback/Comments, Complaints (Department: Inside Sales)</description>
    <label>Customer Service</label>
</RecordType>