force-app/main/default/objects/Case/recordTypes/Equipment_Failure.recordType-meta.xml
<RecordType>
    <fullName>Equipment_Failure</fullName>
    <active>true</active>
    <businessProcess>Main</businessProcess>
    <description>Improper Maintenance, Improper Installation (Department: Engineering)</description>
    <label>Equipment Failure</label>
</RecordType>