force-app/main/default/objects/Case/recordTypes/Logistics.recordType-meta.xml
<RecordType>
    <fullName>Logistics</fullName>
    <active>true</active>
    <businessProcess>Main</businessProcess>
    <description>Delivery, Delays (Department: Shipping)</description>
    <label>Logistics</label>
</RecordType>