force-app/main/default/objects/Case/recordTypes/NCR.recordType-meta.xml
<RecordType>
    <fullName>NCR</fullName>
    <active>true</active>
    <businessProcess>Main</businessProcess>
    <description>Non-conformance report</description>
    <label>NCR</label>
</RecordType>