force-app/main/default/objects/Case/recordTypes/Performance.recordType-meta.xml
<RecordType>
    <fullName>Performance</fullName>
    <active>true</active>
    <businessProcess>Main</businessProcess>
    <description>Equipment is not working as it should (Department: Engineering)</description>
    <label>Performance</label>
</RecordType>