force-app/main/default/objects/Case/recordTypes/Quality_Control.recordType-meta.xml
<RecordType>
    <fullName>Quality_Control</fullName>
    <active>true</active>
    <businessProcess>Main</businessProcess>
    <description>Wrong/Incorrect Equipment, Equipment Quality, Equipment not built to Specs (Department: Engineering)</description>
    <label>Quality Control</label>
</RecordType>