force-app/main/default/objects/Case/recordTypes/RMA.recordType-meta.xml
<RecordType>
    <fullName>RMA</fullName>
    <active>true</active>
    <businessProcess>Main</businessProcess>
    <description>Returns on equipment not required (Department: Shipping)</description>
    <label>RMA</label>
</RecordType>