force-app/main/default/objects/Case/validationRules/CAS001_Resolution_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CAS001_Resolution_Date_Required</fullName>
    <active>true</active>
    <description>Resolution Date cannot be blank once the case has been Resolved</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Resolved&quot;),
 ISBLANK( Resolution_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Resolution_Date__c</errorDisplayField>
    <errorMessage>Error CAS001
Please enter a resolution date.</errorMessage>
</ValidationRule>