force-app/main/default/objects/Case/validationRules/CAS002_Resolution_Outcome_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CAS002_Resolution_Outcome_Required</fullName>
    <active>true</active>
    <description>Resolution Outcome cannot be blank once the case has been Resolved</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Resolved&quot;),
ISBLANK( Resolution_Outcome__c )
)</errorConditionFormula>
    <errorDisplayField>Resolution_Outcome__c</errorDisplayField>
    <errorMessage>Error CAS002
Please enter a resolution outcome.</errorMessage>
</ValidationRule>