force-app/main/default/objects/Case/listViews/AllCases.listView-meta.xml
<ListView>
    <fullName>AllCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Equipment__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Next_Step__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Age__c</columns>
    <columns>Resolution_Date__c</columns>
    <columns>CASES.ESCALATION_STATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>