force-app/main/default/objects/Case/listViews/AllOpenMosaicCases.listView-meta.xml
<ListView>
    <fullName>AllOpenMosaicCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Equipment__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Age__c</columns>
    <columns>Next_Step__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Open,In Progress</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Mosaic</value>
    </filters>
    <label>All Open Mosaic Cases</label>
</ListView>