force-app/main/default/objects/Case/listViews/AllResolvedCases.listView-meta.xml
<ListView>
    <fullName>AllResolvedCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Equipment__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Next_Step__c</columns>
    <columns>Resolution_Date__c</columns>
    <columns>CASES.ESCALATION_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Resolved</value>
    </filters>
    <label>All Resolved Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>