force-app/main/default/objects/Case/listViews/AllResolvedMosaicCases.listView-meta.xml
<ListView>
    <fullName>AllResolvedMosaicCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Equipment__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Next_Step__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Age__c</columns>
    <columns>Resolution_Date__c</columns>
    <columns>CASES.ESCALATION_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Resolved</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Mosaic</value>
    </filters>
    <label>All Resolved Mosaic Cases</label>
</ListView>