force-app/main/default/objects/Case/listViews/Case_Team_Members.listView-meta.xml
<ListView>
    <fullName>Case_Team_Members</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Case Team Members Cases</label>
</ListView>