force-app/main/default/objects/Case/listViews/CasesKN.listView-meta.xml
<ListView>
    <fullName>CasesKN</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Equipment__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Next_Step__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Open,In Progress</value>
    </filters>
    <filters>
        <field>AccountOwnerAlias__c</field>
        <operation>equals</operation>
        <value>KN</value>
    </filters>
    <label>Open Cases - KN</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>